[project]
name = "orchestrator"
version = "0.1.0"
description = "The Orchestrator is responsible for managing contract negotiation and coordinating communication between the various servers involved in the process."
authors = [
    {name = "Ilias Moysidis",email = "iliamous@iti.gr"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.109.0,<0.110.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "edcpy (>=0.10.1,<0.11.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "coloredlogs (>=15.0.1,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"

